// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (--url-configs) includes the config link 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 [Configurations](https://example.com/configs) enabled in.\\
🌟 Set in the \`all\` [configuration](https://example.com/configs).\\
🔥 Set in the \`recommended\` [configuration](https://example.com/configs).\\
⭐ Set in the \`style\` [configuration](https://example.com/configs).\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌟 ⭐  | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌟 🔥 | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.

"
`;

exports[`generate (--url-configs) includes the config link 2`] = `
"# test/no-foo

💼 This rule is enabled in the following [configs](https://example.com/configs): 🌟 \`all\`, 🔥 \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--url-configs) includes the config link 3`] = `
"# test/no-bar

💼 This rule is enabled in the following [configs](https://example.com/configs): 🌟 \`all\`, ⭐ \`style\`.

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

💭 This rule requires [type information](https://typescript-eslint.io/linting/typed-linting).

📝 Description of no-bar.

<!-- end auto-generated rule header -->
## Rule details
details
"
`;

exports[`generate (--url-configs) includes the config link with only recommended config 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 [Configurations](https://example.com/configs) enabled in.\\
🌐 Set in the \`all\` [configuration](https://example.com/configs).\\
✅ Set in the \`recommended\` [configuration](https://example.com/configs).\\
🎨 Set in the \`style\` [configuration](https://example.com/configs).\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.

"
`;

exports[`generate (--url-configs) includes the config link with only recommended config 2`] = `
"# test/no-foo

💼 This rule is enabled in the following [configs](https://example.com/configs): 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;
